# Never-Lucky-Fantasy-Baseball

./: LICENSE  Makefile  README.md  pyproject.toml
data/precomputed/: hitters_2020.csv  pitchers_2020.csv  rosters_2020.csv
docs/: design_memo.md
examples/: run_demo.py
outputs/: biggest_statcast_bumps.csv  biggest_traditional_bumps.csv  player_value_comparison.csv  standings.csv  team_category_points.csv  team_category_values.csv
src/statcast_roto/: __init__.py  categories.py  charts.py  cli.py  drafting.py  pitch_level.py  schemas.py  scoring.py  sources.py  value.py
tests/: test_pitch_level.py  test_scoring.py  test_value.py
